--- a/uploadMenu.html
+++ b/uploadMenu.html
@@ -23,6 +23,7 @@
                 };
                 const app = initializeApp(firebaseConfig);
                 const provider = new GoogleAuthProvider();
+                provider.addScope('https://www.googleapis.com/auth/contacts.readonly');
                 const db = getFirestore(app);
                 const auth = getAuth();
                 //handle form submission
@@ -228,4 +229,5 @@
         </body>
 
 </html>
+
 
