--- a/uploadMenu.html
+++ b/uploadMenu.html
@@ -66,7 +66,18 @@
                         <textarea name="message"  rows="10"></textarea>
                         <input id="emailINPUT" type="text" placeholder="email" style="background-color:#335879">
                         <input id="passwordINPUT" type="password" placeholder="password" style="background-color:#335879">
-                        <button id="showPassBTN" style="background-color: #335879">Show Password</button>
+                        <input type="checkbox" onclick="myFunction()">Show Password
+                        <br>
+                        <script>
+                        function myFunction() {
+                          var x = document.getElementById("myInput");
+                          if (x.type === "password") {
+                            x.type = "text";
+                          } else {
+                            x.type = "password";
+                          }
+                        }
+                        </script>
                         <button id="submitBTN" type="submit" >publish</button>
                         * publishing replaces all current menu details
                     </form>
