--- a/uploadMenu.html
+++ b/uploadMenu.html
@@ -66,7 +66,11 @@
                         <textarea name="message"  rows="10"></textarea>
                         <input id="emailINPUT" type="text" placeholder="email" style="background-color:#335879">
                         <input id="passwordINPUT" type="password" placeholder="password" style="background-color:#335879">
-                        <input id="showPassBTN" type="checkbox" onclick="myFunction()">Show Password
+                    <div class="container">
+                        <input id="showPassBTN" type="checkbox" onclick="myFunction()">
+  	                    <img class="img-unchecked"  src="./PNG/Password/showPass.png" width="20px">
+	                    <img class="img-checked"    src="./PNG/Password/hidePass.png"   width="20px">
+                    </div>
                         <br>
                         <script>
                             function myFunction() {
