eafuigaugectyrvinhtbuuyngcb74ynri7y3nxruh

--- a/uploadMenu.html
+++ b/uploadMenu.html
@@ -65,20 +65,27 @@
                     <form name=submit-to-google-sheet class="upload-form">
                         <textarea name="message"  rows="10"></textarea>
                         <input id="emailINPUT" type="text" placeholder="email" style="background-color:#335879">
-                        <input id="passwordINPUT" type="password" placeholder="password" style="background-color:#335879">
-                    <div class="container">
-                        <input id="showPassBTN" type="checkbox" onclick="myFunction()">
-  	                    <img class="img-unchecked"  src="./PNG/Password/showPass.png" width="20px">
-	                    <img class="img-checked"    src="./PNG/Password/hidePass.png"   width="20px">
-                    </div>
+                        <div id="passCon">
+                            <input id="passwordINPUT" type="password" placeholder="password" style="background-color:#335879">
+                            <div class="container">
+                                <img id="img-unchecked"  src="./PNG/Password/showPass.png" width="30px" style="filter: invert(100%);" onclick="myFunction()">
+                                <img id="img-checked"    src="./PNG/Password/hidePass.png"   width="35px" height="17px" style="filter: invert(100%);" onclick="myFunction()">
+                            </div>
+                        </div>
                         <br>
                         <script>
                             function myFunction() {
-                              var x = document.getElementById("passwordINPUT");
-                              if (x.type === "password") {
-                                x.type = "text";
+                            //   var passwordINPUT = document.getElementById("passwordINPUT");
+                              var showPass = document.getElementById("img-unchecked");
+                              var hidePass = document.getElementById("img-checked");
+                              if (passwordINPUT.type === "password") {
+                                showPass.style.display="none"
+                                hidePass.style.display="inline"
+                                passwordINPUT.type = "text";
                               } else {
-                                x.type = "password";
+                                showPass.style.display="inline"
+                                hidePass.style.display="none"
+                                passwordINPUT.type = "password";
                               }
                             }
                         </script>
