--- a/uploadMenu.html
+++ b/uploadMenu.html
@@ -9,13 +9,15 @@
             <script src="emailScript.js"></script>
             <script type="module" name="upload process" src="push.js"></script>
             <script>
-                const scriptURL = 'https://script.google.com/macros/s/AKfycbyszkeMxNOSgKDwxueAc7aiZcY8ZrvlJlQUnHcWkt63zymvxipmiq-pefW7E3aM1vKa/exec'
-                const form = document.forms['submit-to-google-sheet']
-                console.log("submit to google sheet btn triggered")
-                console.log("Start of EventListener");
-                fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-                .then(response =>{ console.log('Google Sheet Success!', response)})
-                .catch(error => console.error('Error!', error.message));
+                function GSFunction(){
+                    const scriptURL = 'https://script.google.com/macros/s/AKfycbyszkeMxNOSgKDwxueAc7aiZcY8ZrvlJlQUnHcWkt63zymvxipmiq-pefW7E3aM1vKa/exec'
+                    const form = document.forms['submit-to-google-sheet']
+                    console.log("submit to google sheet btn triggered")
+                    console.log("Start of EventListener");
+                    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+                    .then(response =>{ console.log('Google Sheet Success!', response)})
+                    .catch(error => console.error('Error!', error.message));
+                }
             </script>
             </head>
             <nav>
@@ -97,7 +99,7 @@
                               }
                             }
                         </script>
-                        <button id="submitBTN" type="submit" onclick="">publish</button>
+                        <button id="submitBTN" type="submit" onclick="GSFunction()">publish</button>
                         * publishing replaces all current menu details
                     </form>
                 </div>
