owyhbu5igkhyurw7it53uh8y96265t8749e

--- a/uploadMenu.html
+++ b/uploadMenu.html
@@ -99,7 +99,7 @@
                               }
                             }
                         </script>
-                        <button id="submitBTN" type="submit" onclick="GSFunction()">publish</button>
+                        <button id="submitBTN" type="submit" >publish</button>
                         * publishing replaces all current menu details
                     </form>
                 </div>
