--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     document.getElementById('emailBTN').innerHTML='Get Weekly Email!'
                 }
             })
-          }
+            }
     </script>
 </head>
 <body>
@@ -142,6 +142,7 @@
             <div class="divider"></div>
         </div>
     </div>
+    <button ><a src="https://drive.google.com/uc?export=download&id=1hcYgYWXTxm-T5o9I3uV4E0kaQ0cYsmw-">Download Menu</a></button>
     <div class="card-container-WHATSINCLUDED">
         <div class="card-WHATSINCLUDED">
             <h2>$8 MEAL INCLUDES:</h2>
