--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,8 +69,8 @@
             <div class="dateCard">
                 <h1 class="menuTitle" style="text-align:center;">TUESDAY</h1>
                 <h3 id="date1" class="date"></h3>
-                <h1 id="closed1" class="closed" style="color:#be4d25;background-color:white;"></h1>
             </div>
+            <h1 id="closed1" class="closed" style="color:#be4d25;background-color:white;"></h1>
             <div class="food">
                 <h1 class="menuSectionTitle">ENTREE</h1> 
                 <h3 id="entree1" class="menu-items-spaced-over"></h3>
@@ -118,8 +119,8 @@
             <div class="dateCard">
                 <h1 class="menuTitle" style="text-align:center;">THURSDAY</h1>
                 <h3 id="date3" class="date"></h3>
-                <h1 id="closed3" class="closed" style="color:#be4d25;background-color:white;"></h1>
             </div>
+            <h1 id="closed3" class="closed" style="color:#be4d25;background-color:white;"></h1>
             <div class="food">
                 <h1 class="menuSectionTitle">ENTREE</h1> 
                 <h3 id="entree3" class="menu-items-spaced-over"></h3>
@@ -169,8 +170,8 @@
         <div class="card-COMMON">
             <h2>Accepted Payments</h2>
             <p>
-                <img style="width:auto;height:100px;margin-right: 50px;" src="content/NoCard.png" alt="noCard">
-                <img style="width:auto;height:100px;" src="content/Cash.png" alt="noCard">
+                <img style="margin-right: 50px;" src="content/noCard.png" alt="noCard">
+                <img src="content/cash.png" alt="cash">
                 <br><br><span class="info-label payments" style="margin-right: 40px;">No Card</span>
                 <span class="info-label payments">Cash Only</span>
             </p>
@@ -184,12 +185,8 @@
         </div>
     </div>
 </main>
-<footer>
-    Maintained & Built by SICTC Computer Science Software Development <br>
-    The LunchBox <br>
-    1901 Lynch Rd, Evansville, IN 47711 <br>
-    <a href="https://sictc.evscschools.com/"><img src="content/footerSICTC.png" alt="footerSICTC"></a>
-</footer>
+<script src="footer.js"></script>
 </body>
 </html>
+
 
